fix footer hiding content on small devices

--- a/app/styles.css
+++ b/app/styles.css
@@ -48,6 +48,7 @@ body {
 main {
   background-color : #fff;
   opacity: 0.9;
+  margin-bottom: 15vh;
 }
 
 .footer {
@@ -55,5 +56,5 @@ main {
   position: fixed;
   bottom: 0vh;
   width: 100vw;
-  padding: 10px;
+  padding: 15px;
 }
